--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-
 body{
     font-family: 'Be Vietnam Pro', sans-serif;
+    
    
 }
 header,main{
@@ -121,6 +121,8 @@ section{
     position: relative;
 
 }
+
+
 .photo img{
     width:400px;
     height: 300px;
@@ -181,7 +183,158 @@ footer{
 
 }
 .fab{
-    margin:5px;
-    font-size: 15px;
+    margin:10px;
+    font-size: 17px;
 }
+/* media queries for different devices */
+
+/* media query for mobile */
+@media only screen and (max-width:688px){
+    body{
+        margin: 0%;
+        padding: 0%;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        
+    }
+    /* 1st section  */
+    header .menu{
+        display: none;
+    }
+    
+    .st-part{
+        margin-bottom: 80px;
+
+    }
+    .st-part p{
+        font-size: 30px;
+        margin-bottom: 20px;
+        
+    }
+    .flexible-sec{
+        display: grid;
+    }
+      .sponsors{
+          display: grid;
+          grid-template-columns: repeat(3,1fr);
+          box-shadow: none;
+          margin-bottom: 250px;
+      }  
+   
+       .commercials, .photo-included{
+           display:grid;
+           grid-template-columns: repeat(1 ,1fr);
+          margin-bottom: 250px;
+
+       }
+       .see-more{
+           position: relative;
+           right: -300px;
+           top: 100px;
+       }
+       
+        .commercial{
+            width: 100%;
+            height: 100%;
+        }
+        .preebooking-button{
+            position: relative;
+            top: -10px;
+            left:-50px;
+        }
+    
+    /* footer  */
+   
+        footer{
+        margin: 0;
+            padding: 0%;
+            
+            width:688px;
+    }
+    .last-item{
+        position: relative;
+        right: -100px;
+        margin-top: 30px;
+        padding: 20px;
+        }
+}
+/* media query for ipad */
+@media only screen and (min-width:689px) and (max-width:992px){
+
+     body{
+        font-size: 20px;
+        
+    }
+    /* 1st section  */
+   
+    
+    .st-part{
+        margin-bottom: 80px;
+
+    }
+    .st-part p{
+        font-size: 30px;
+        margin-bottom: 20px;
+        
+    }
+    .flexible-sec{
+        display: grid;
+    }
+      .sponsors{
+          display: grid;
+          grid-template-columns: repeat(3,1fr);
+          box-shadow: none;
+          margin-bottom: 250px;
+      }  
+   
+       .commercials {
+           display:grid;
+           grid-template-columns: repeat(2 ,1fr);
+          margin-bottom: 250px;
+
+       }
+       .photo-included{
+           display: grid;
+           grid-template-columns: repeat(1,1fr);
+       }
+       .see-more{
+           position: relative;
+           right: -100px;
+           top: 100px;
+       }
+       
+        .commercial{
+            width: 100%;
+            height: 100%;
+        }
+        .preebooking-button{
+            position: relative;
+            top: -10px;
+            left:-10px;
+        }
+    
+    /* footer  */
+   
+        footer{
+        margin: 0;
+        padding: 0%;
+        width: 993px;
+        height: 300px;
+    }
+        
+        
+
+        
+    .last-item{
+        position: relative;
+        right: -100px;
+        margin-top: 30px;
+        padding: 20px;
+        }
+}
+
+
+
+
 
